# AI4h

./: .gitignore  pyproject.toml
notebooks/: ex2.ipynb  ex3.ipynb  ex4.ipynb  linear_model.ipynb
src/ai4h/models/: embeddings.py  ensemble.py  linear_model.py  network.py  tree.py
tests/: test_embeddings.py  test_test.py
