[project]
name = "ai4h"
version = "0.1.0"
description = "This is a project, with the goal of making a package to explore and solve the problems related to the teachings of the KU Course: AI For Humanity."
readme = "README.md"
authors = [
    { name = "MathiasPorsgaard", email = "mathiasporsgaard@hotmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pytest>=8.4.2",
    "scikit-learn>=1.7.2",
    "tabulate>=0.9.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "typing>=3.10.0.0",
]

[project.scripts]
ai4h = "ai4h:main"

[build-system]
requires = ["uv_build>=0.8.16,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=8.4.2",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]
